codebase/kube/02-services/05-traefik-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: ingress-traefik
  labels:
    app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress-lb
  template:
    metadata:
      labels:
        app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v1.7.16-alpine
          name: traefik-ingress-lb
          ports:
            - name: http
              containerPort: 80
            - name: admin
              containerPort: 8080
          args:
            - --api
            - --kubernetes
            - --logLevel=INFO
            # enable access log
            - --accesslog
            # write logs into container STDOUT
            - --accesslog.filepath=/dev/stdout
            - --accesslog.format=json
