codebase/kube/02-services/02-whoami-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: whoami-service
  namespace: default
spec:
  selector:
    app: whoami
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
